--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,11 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
+  },
+  "baseUrl": "./src",
+  "paths": {
+    "shared/*":[
+      "app/shared/*"
+    ]
   }
 }
